--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+[![Build Status](https://travis-ci.org/leyas/rails-app.svg?branch=master)](https://travis-ci.org/leyas/rails-app)
+
 http://sl-gists.herokuapp.com/
 
 - Użyłem 
